--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.8)
 
-include("gate/cmake/HunterGate.cmake")
+include("cmake/HunterGate.cmake")
 HunterGate(
     URL "https://github.com/ruslo/hunter/archive/v0.19.123.tar.gz"
     SHA1 "57d07480686f82ddc916a5980b4f2a18e5954c2b"
